Fixing a layout issue in the Cast/Creative section of Show pages in IE11

--- a/docroot/themes/custom/big_noise/css/main.css
+++ b/docroot/themes/custom/big_noise/css/main.css
@@ -1729,6 +1729,7 @@ nav ul {
   /* line 331, ../scss/layout/_node--show.scss */
   .show--cast-creative section {
     flex-basis: 50%;
+    max-width: 50%;
   }
 }
 @media (max-width: 767px) {
