--- a/docroot/themes/custom/big_noise/scss/layout/_node--show.scss
+++ b/docroot/themes/custom/big_noise/scss/layout/_node--show.scss
@@ -332,7 +332,7 @@
     flex-basis: 100%;
     @media (min-width: $bn-breakpoint-width-min-layout-tablet) {
       flex-basis: 50%;
-
+      max-width: 50%;
     }
 
     @media (max-width: $bn-breakpoint-width-max-layout-mobile) {
